--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       
     </head>
     <body style="background:lightblue;font-family:sans-serif;">
-        <center><h1>Добро пожаловать!</h1>
+        <center><h1>ВНИМАНИЕ ЭТО БЕТА ВЕРСИЯ САЙТА!</h1>
         <img src="https://i.ytimg.com/vi/0Zx7tVN41jo/maxresdefault.jpg" with="220" height="220"/>
         </center>
         <p>Мы делаем игры про Соника.Первый наш проект Sonic Frontiers 2D.В данный момент делаем игру Sonic the hedgehog 3 REMAKE</p>
