--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <tittle>BOX NOW 23</tittle>
+        <tittle>BOX  23</tittle>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         
     </head>
     <body style="background:lightblue;font-family:sans-serif;">
-        <center><h1>Скачать новейшую версию BOX NOW</h1></center>
-        <a href="https://drive.google.com/file/d/1VirYSiBuAvMphKCaFfk0qzzerM16xEvk/view?usp=share_link"> 
-        <button type="button" class="btn btn-dark">Установка новой версии BOX NOW</button>
+        <center><h1>Скачать новейший билд BOX - DEMO PRIVIEW</h1></center>
+        <center><a href="https://drive.google.com/file/d/1VirYSiBuAvMphKCaFfk0qzzerM16xEvk/view?usp=share_link"> 
+            <button type="button" class="btn btn-dark">Установка новой версии BOX NOW</button></center>
         
 
 
