--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <body style="background:lightblue;font-family:sans-serif;">
     <style type="text/css">
 BODY {
-     background-color: black
+     background-color: light
 }
 nav {
     margin: 5px;
     padding: 5px;
-    border:  5px solid darkgray;
-    background-color: black;
-    border-radius: 10px;    
+    border:  5px solid blue;
+    background-color: lightblue;
+    border-radius: 10px;   
 }
 nav a {
     margin: 20px;
